# MyPlayer

app/: build.gradle
app/src/main/cpp/: BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  MyPlayer.cpp  MyPlayer.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/example/myplayer/: Flags.java  MainActivity.java  MyPlayer.java
gradle/wrapper/: gradle-wrapper.properties
